# aranya

./: .gitmodules  README.md
backend/: .env.example  Cargo.toml
backend/database_schema/: aranya_db_schema.sql
backend/migrations/: 0001_course_table.sql  0002_add_module_lesson_quiz_table.sql
backend/src/: db.rs  main.rs
backend/src/handlers/: course.rs  progress.rs
backend/src/handlers/attestation/: creator.rs
backend/src/helpers/: base.rs
backend/src/models/: course.rs  progress.rs
backend/src/routes/: attestation.rs  course.rs  mod.rs  progress.rs
contracts/: .env.example  .gitignore  foundry.toml  remappings.txt
contracts/data/: LearnerNFT_address.txt
contracts/metadata/: milestone_1.json  milestone_2.json  milestone_3.json  milestone_4.json
contracts/metadata/learner/: learner_milestone_0.json  learner_milestone_1.json  learner_milestone_2.json  learner_milestone_3.json  learner_milestone_4.json
contracts/metadata/teacher/: teacher_milestone_0.json  teacher_milestone_1.json  teacher_milestone_2.json  teacher_milestone_3.json  teacher_milestone_4.json
contracts/script/: Base.s.sol  Counter.s.sol  CourseManager.s.sol  CreatorNFT.s.sol  LearnerNFT.s.sol
contracts/src/: CourseManager.sol  CreatorNFT.sol  CreatorNFTImpl.sol  FdcTransferEventListener.sol  LearnerNFT.sol  LearnerNFTImpl.sol
webapp/: .env.example  package-lock.json  package.json
webapp/src/app/: layout.tsx  page.tsx
webapp/src/components/: CompleteLessonButton.tsx  CreateCourse.tsx  JoinCourse.tsx  PrivyLoginButton.tsx  PrivyWrapper.tsx
webapp/src/types/: course.ts
(+72 files in other folders)
