[package]
name = "aranya"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.46.1", features = ["full"]}
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"]}
dotenv = "0.15.0"
axum = "0.8.4"
serde = "1.0.219"
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["cors"]}
